pushing new updated code to the github(this is a test to see if i did this correctly)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ WEB PAGE IS PARSED THE SAME WAY BY DIFFERNT WEB BROWERS-->
 <head> 
     <!-- IS THE CONTRAINER FOR METADATA(DATA ABOUT DATA) IS PLACED BETWEEN
     THE HTML TAG AND THE BODY TAG -->
-    <!-- THE FOLLOWING ELEMENTS THAT CAN GO INSIDE IS TITLE(REQUIRED IN EVERY HTML DOCUMENT), STYLE, BASE, LINK, META, SCRIPT, AND NOSCRIPT-->
+    <!-- THE FOLLOWING ELEMENTS THAT CAN GO INSIDE IS TITLE(REQUIRED IN EVERY HTML DOCUMENT), 
+        STYLE, BASE, LINK, META, SCRIPT, AND NOSCRIPT-->
     <title>A Simple Website</title>
 </head>
 </html>
