commiting a new change to the main branch

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@ WHAT VERSION THE HTML THE PAGE IS WRITTEN IN. THIS IS ENSURES THAT THE
 WEB PAGE IS PARSED THE SAME WAY BY DIFFERNT WEB BROWERS-->
 
 <html lang = "en">
+    <!--THE HTML TAG REPRESENTS THE ROOT OF THE HTML DOCUMENT AND IS A
+    CONTAINER FOR ALL OTHER HTML ELEMENTS EXCEPT !DOCTYPE *NOTE ALWAYS INCLUDE
+THE LANG ATTRIBUTE INSIDE THE HTML TAG AS THIS IS MEANT TO ASSIST SEARCH ENGINES
+AND BROWSERS-->
 <head> 
     <!-- IS THE CONTRAINER FOR METADATA(DATA ABOUT DATA) IS PLACED BETWEEN
     THE HTML TAG AND THE BODY TAG -->
@@ -13,4 +17,8 @@ WEB PAGE IS PARSED THE SAME WAY BY DIFFERNT WEB BROWERS-->
         STYLE, BASE, LINK, META, SCRIPT, AND NOSCRIPT-->
     <title>A Simple Website</title>
 </head>
+<body>
+    <h1> This is the heading </h1>
+    <p> This is a paragraph </p>
+</body>
 </html>
