this commit includes the new style sheet that just created, as well as an update to the html file refercencing the newly created stylesheet

--- a/index.html
+++ b/index.html
@@ -4,17 +4,21 @@
 HTML OR XHTML DOCUMENT. IS IS AN INSTRUCTION TO THE WEB BROWSER ABOUT
 WHAT VERSION THE HTML THE PAGE IS WRITTEN IN. THIS IS ENSURES THAT THE
 WEB PAGE IS PARSED THE SAME WAY BY DIFFERNT WEB BROWERS-->
-
+<!-- Always comment as teh project is progressing and make sure to refer constanmly to planning details as teh full
+website takes shape-->
 <html lang = "en">
     <!--THE HTML TAG REPRESENTS THE ROOT OF THE HTML DOCUMENT AND IS A
     CONTAINER FOR ALL OTHER HTML ELEMENTS EXCEPT !DOCTYPE *NOTE ALWAYS INCLUDE
 THE LANG ATTRIBUTE INSIDE THE HTML TAG AS THIS IS MEANT TO ASSIST SEARCH ENGINES
 AND BROWSERS-->
-<head> 
-    <!-- IS THE CONTRAINER FOR METADATA(DATA ABOUT DATA) IS PLACED BETWEEN
+<head>  <!-- IS THE CONTRAINER FOR METADATA(DATA ABOUT DATA) IS PLACED BETWEEN
     THE HTML TAG AND THE BODY TAG -->
     <!-- THE FOLLOWING ELEMENTS THAT CAN GO INSIDE IS TITLE(REQUIRED IN EVERY HTML DOCUMENT), 
         STYLE, BASE, LINK, META, SCRIPT, AND NOSCRIPT-->
+    <link rel = "stylesheet" type "text/css" href ="CSS/style.css"> <!-- Each html page must
+    include a a reference to the external style sheet file inside the <link> element inside the head secition-->
+   
+    
     <title>A Simple Website</title>
 </head>
 <body>
