--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ AND BROWSERS-->
     THE HTML TAG AND THE BODY TAG -->
     <!-- THE FOLLOWING ELEMENTS THAT CAN GO INSIDE IS TITLE(REQUIRED IN EVERY HTML DOCUMENT), 
         STYLE, BASE, LINK, META, SCRIPT, AND NOSCRIPT-->
+
     <link rel = "stylesheet" type "text/css" href ="CSS/style.css"> <!-- Each html page must
     include a a reference to the external style sheet file inside the <link> element inside the head secition-->
    
@@ -22,6 +23,14 @@ AND BROWSERS-->
     <title>A Simple Website</title>
 </head>
 <body>
+    <div class ="navBar"> 
+        <ul>
+           <li><a href="default.asp">Home</a></li>
+           <li><a href="default.asp">Services</a></li> 
+           <li><a href="about.asp">About</a></li>
+           <li><a href="contact.asp">Contact</a></li>
+        </ul>
+    </div>
     <h1> This is the heading </h1>
     <p> This is a paragraph </p>
 </body>
