--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@ AND BROWSERS-->
 <body>
     <div class ="navBar"> 
         <ul>
-           <li><a href="default.asp">Home</a></li>
-           <li><a href="default.asp">Services</a></li> 
-           <li><a href="about.asp">About</a></li>
-           <li><a href="contact.asp">Contact</a></li>
+           <li><a class = "active" href="#active">Home</a></li>
+           <li><a href="#services">Services</a></li> 
+           <li><a href="#about">About</a></li>
+           <li><a href="#contact">Contact</a></li>
         </ul>
     </div>
+    <br>
     <h1> This is the heading </h1>
     <p> This is a paragraph </p>
 </body>
