--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ AND BROWSERS-->
     THE HTML TAG AND THE BODY TAG -->
     <!-- THE FOLLOWING ELEMENTS THAT CAN GO INSIDE IS TITLE(REQUIRED IN EVERY HTML DOCUMENT), 
         STYLE, BASE, LINK, META, SCRIPT, AND NOSCRIPT-->
+        <script src = "JS/script.js"></script>
+
 
     <link rel = "stylesheet" type "text/css" href ="CSS/style.css"> <!-- Each html page must
     include a a reference to the external style sheet file inside the <link> element inside the head secition-->
